--- a/LeetCodeProblems/LeetCodeProblems.csproj
+++ b/LeetCodeProblems/LeetCodeProblems.csproj
@@ -7,4 +7,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="Hard\" />
+      <Folder Include="Medium\" />
+    </ItemGroup>
+
 </Project>
